# mandelbrot_cpp

./: CMakeLists.txt  main.cpp  mainGPU.cu  main_gpu.exp  main_gpu.lib
